--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ header .content {
 
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)),
-    url("/images/3.jpg");
+    url("./images/3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -164,7 +164,7 @@ header a {
   width: 100%;
   height: 400px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)),
-    url("/images/sevices.jpg");
+    url("./images/sevices.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -214,7 +214,7 @@ header a {
 }
 #services {
   width: 100%;
-  background-image: url("/images/big_mustache.png");
+  background-image: url("./images/big_mustache.png");
   background-repeat: no-repeat;
   background-position: center;
   margin-top: 10px;
@@ -259,7 +259,7 @@ header a {
   width: 100%;
   height: 800px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)),
-    url("/images/prices.jpg");
+    url("./images/prices.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -444,7 +444,7 @@ header a {
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)),
-    url("/images/contact_1.jpg");
+    url("./images/contact_1.jpg");
   background-size: cover;
   background-position: center;
 }
