--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ header .content {
 
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)),
-    url("../images/3.jpg");
+    url("./images/3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
